--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.counter-info{
+  display: flex;
+  column-gap: 100px;
+  margin-bottom: 50px;
+}
